# eklavya-ros-pkg

./: .gitignore  AGV.cpp  CMakeLists.txt  CMakeLists.txt.extMRPT  EklavyaThreaded.cpp  LICENSE.txt  Makefile  Makefile_old  README.md  README.txt  manifest.xml  stack.xml
Modules/: devices.h
Modules/GPS/: GPS.cpp
Modules/IMU/: IMU.cpp  IMU.cpp~
Modules/Lane/: Lane.h
Modules/Lidar/: LidarData.cpp  LidarData.cpp~  LidarData.h
Modules/Nav/: NAV.cpp  Nav.vcxproj  Nav.vcxproj.filters  PathPlanner.h  Planner.cpp  SeedGen1.cpp  seedGen
Modules/Sonar/: Makefile
Utils/SerialPortLinux/: testBot.cpp
Utils/VehicleTest/: vehicle.cpp
archive/: CMakeLists.txt.IntMRPT
camera_node/: CMakeLists.txt  manifest.xml
camera_node/src/: camera_pub.cpp  camera_sub.cpp
docs/: Hokuyo_info  SparkfunIMU
eklavya_bringup/: CMakeLists.txt  manifest.xml
eklavya_bringup/AtmegaControlDriver/: Makefile  info  main.c
eklavya_bringup/include/: diffdrive_robot_controller.h
eklavya_bringup/src/: .goutputstream-EB5OTW  diffdrive_robot_controller.cpp  diffdrive_robot_controller.py  vn200_gps_ins.c  vn200_gps_ins.cpp
eklavya_description/: manifest.xml
eklavya_description/launch/: eklavya2_display_rviz.launch  eklavya_display_rviz.launch  eklavya_empty_world.launch  int1.launch  robot.launch
eklavya_description/meshes/: body.dae  castor.dae  castorWheel.dae  castorwheel.dae  wheel.dae  wheelhub.dae
eklavya_description/robots/: eklavya.urdf.xacro
eklavya_description/rviz/: rviz_display.vcg  rviz_display_model.vcg
eklavya_description/urdf/: common.xacro  eklavya.urdf  eklavya.urdf.xacro  eklavya2.urdf.xacro  eklavya_body.urdf.xacro  eklavya_body2.urdf.xacro  eklavya_calibration.xacro  eklavya_castor.xacro  eklavya_hardware.urdf.xacro  eklavya_hardware.xacro  eklavya_kinect.urdf.xacro  eklavya_wheel.xacro  gazebo.urdf.xacro  gazebo2.urdf.xacro  gazebo_segbot.xacro  gazebo_segbot_common.xacro  gazebo_segbot_simple.xacro  hokuyo_urg.xacro  materials.urdf.xacro  microstrain_3dmgx3_imu.gazebo.xacro  microstrain_3dmgx3_imu.urdf.xacro  params.xacro  sick_lms100_200.urdf.xacro
eklavya_encoder/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
eklavya_encoder/msg/: Encoder_Data.msg
eklavya_encoder/src/: dummy_encoder.cpp  encoder.cpp  encoder.h  encoder_publisher.cpp  roboteq_encoder.cpp  serial_encoder.cpp  serial_lnx.cpp
eklavya_gazebo/: manifest.xml
eklavya_gazebo/launch/: IGVC_grass.launch  box.launch  eklavya_empty_world.launch  empty_world_eklavya.launch  empty_world_eklavya2.launch  gazebo_ office_eklavya.launch  robot.launch  robot2.launch  simple_office.launch  simple_office_eklavya.launch
eklavya_gazebo/worlds/: IGVC_grass.world  eklavya.world  notWorking.xml  simple_office_box.world
eklavya_gazebo_plugins/: CMakeLists.txt  manifest.xml
eklavya_gazebo_plugins/src/: diffdrive_plugin.cpp  eklavya_drive_plugin.cpp  eklavya_simple_drive_plugin.cpp  gazebo_ros_eklavya.cpp
eklavya_imu_sparkfun/launch/: imu.launch
eklavya_imu_sparkfun/nodes/: sparkfun_imu_node.py
eklavya_launch/: gazebo_ office_eklavya.launch
eklavya_launchers/: .gitignore  manifest.xml
eklavya_launchers/launch/: amcl_move_base_demo.launch  build_map_gazebo_demo.launch  eklavya_office_gazebo_rviz_key_demo.launch  gmapping_move_base_demo.launch  hector_build_map_gazebo_demo.launch  office_turtlebot.launch
eklavya_navigation/: mainpage.dox  manifest.xml
eklavya_navigation/config/: amcl_eklavya.launch  amcl_eklavya.xml  base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  gmapping_eklavya.launch  gmapping_eklavya.xml  local_costmap_params.yaml  move_base_eklavya.launch
eklavya_node/: CMakeLists.txt  Makefile  laser_config_ScanShadowsFilter.yaml  mainpage.dox  manifest.xml
eklavya_node/launch/: core.launch  drivers.launch  drivers_roboteq.launch  hokuyo_bag.launch  hokuyo_test.launch  run.launch  vehicle.launch  vehicle_imu.launch
eklavya_node/src/: .gitignore  AGV.cpp  eklavya2.cpp  eklavya2.h  notes.txt
eklavya_node/src/Modules/: devices.h
eklavya_node/src/Modules/Diagnostics/: diagnostics.cpp  diagnostics.h  diagnostics_thread.cpp
eklavya_node/src/Modules/EKF/: ekf.cpp  ekf.h  ekf_thread.cpp
eklavya_node/src/Modules/Encoder/: encoder.h  encoder_thread.cpp
eklavya_node/src/Modules/Fusion/: fusion.cpp  fusion.h  fusion_thread.cpp  merge.cpp  merge.h  merge_thread.cpp
eklavya_node/src/Modules/GPS/: CONFIG_gps.ini  GPS .old.cpp  GPS.cpp  GPS.h  GRSBB.cpp  gps.cpp  gps.h  gps_thread.cpp
eklavya_node/src/Modules/IMU/: IMU.cpp  IMU.h  imu_thread.cpp  random.h
eklavya_node/src/Modules/Kinect/: Kinect.cpp  Kinect.h
eklavya_node/src/Modules/Lane/: Lane.cpp  lane_data.cpp  lane_data.h  lane_thread.cpp  parameters.txt
eklavya_node/src/Modules/Lidar/: LidarData.cpp  LidarData.h  grid.cpp  lidar_thread.cpp
eklavya_node/src/Modules/Nav/: CMakeLists.txt  Fibonacci.h  PathPlanner.cpp  PathPlanner.h  VectorHeap.cpp  seedGen2.cpp  seeds1.txt
eklavya_node/src/Modules/Nav/OldPlanner/: Planner.cpp
eklavya_node/src/Modules/Navigation/: follow_nose_strategy.cpp  igvc_basic_strategy.cpp  navigation.cpp  navigation.h  navigation_thread.cpp  track_way_point_strategy.cpp
eklavya_node/src/Modules/Planner/: PathPlanner.h  Planner.cpp  planner.cpp  planner.h  plannerMethods.h  planner_thread.cpp  seeds1.txt  seeds2.txt
eklavya_node/src/Modules/SLAM/: slam.cpp  slam.h  slam_thread.cpp
eklavya_node/src/Sensors/: 80-ttyusb.gmp900gps.rules
eklavya_node/src/Utils/SerialPortLinux/: testBot.cpp
eklavya_odometry/: CMakeLists.txt  manifest.xml
eklavya_odometry/src/: odometry.cpp  odometry_publisher.cpp
eklavya_pose/: CMakeLists.txt  mainpage.dox  manifest.xml
eklavya_pose/src/: eklavya_pose.cpp  targets.txt
eklavya_roboteq/: CMakeLists.txt  manifest.xml
eklavya_teleop/: CMakeLists.txt
launch/: eklavya.launch  sim.launch
scripts/: 80-tty.rules  80-ttyacm.rules  dependency.sh  rules_tty.sh  setupROS.sh
src/: .gitignore  AGV.cpp  clip0.avi
yaw_pub/: CMakeLists.txt  mainpage.dox  manifest.xml
(+55 files in other folders)
